-
Bug
-
Resolution: Fixed
-
Critical
-
Lustre 2.7.0
-
None
-
3
-
16388
It looks like a recent landing to master has broken server builds for el7. The only reason this isn't a Blocker is because it's only seen during sever builds, not in client only builds. At the moment we don't routinely do server builds for el7. As soon as we do this problem will be a blocker.
I strongly suspect the problem is due to the recently landed http://review.whamcloud.com/#/c/9299; LU-4647 nodemap: add mapping functionality; since the build errors appear in code that's new with this commit. example errors:
CC [M] /home/bogl/lustre-release/lustre/ptlrpc/../../lustre/target/out_lib.o
CC [M] /home/bogl/lustre-release/lustre/ptlrpc/nodemap_handler.o
CC [M] /home/bogl/lustre-release/lustre/ptlrpc/nodemap_lproc.o
/home/bogl/lustre-release/lustre/ptlrpc/nodemap_lproc.c: In function ‘nodemap_exports_open’:
/home/bogl/lustre-release/lustre/ptlrpc/nodemap_lproc.c:205:34: error: dereferencing pointer to incomplete type
struct lu_nodemap *nodemap = dir->data;
^
make[6]: *** [/home/bogl/lustre-release/lustre/ptlrpc/nodemap_lproc.o] Error 1
make[5]: *** [/home/bogl/lustre-release/lustre/ptlrpc] Error 2
make[4]: *** [/home/bogl/lustre-release/lustre] Error 2
make[3]: *** [_module_/home/bogl/lustre-release] Error 2
make[3]: Leaving directory `/home/bogl/rb/BUILD/kernel-3.10.0.123.9.2.l1029'
make[2]: *** [modules] Error 2
make[2]: Leaving directory `/home/bogl/lustre-release'
make[1]: *** [all-recursive] Error 1
make[1]: Leaving directory `/home/bogl/lustre-release'
make: *** [all] Error 2
I suspect only seen in rhel7 so far as I think it's related to HAVE_ONLY_PROCFS_SEQ #defined by autoconf. If that is true it will also break build on sles12 server too.
- is related to
-
LU-5022 support for 3.10 rhel7 linux kernel
-
- Resolved
-