LU-5853 build: fix el7 build regression

Correct the build failure caused by recent master landing for
LU-4647 nodemap: add mapping functionality by using PDE_DATA()
instead of PDE() in new code.

Signed-off-by: Bob Glossman <bob.glossman@intel.com>
Change-Id: I5b43e485cf5ba25e8473ed5783848aca77b96048
Reviewed-on: http://review.whamcloud.com/12546
Reviewed-by: James Simmons <uja.ornl@gmail.com>
Tested-by: Jenkins
Reviewed-by: Minh Diep <minh.diep@intel.com>
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: Oleg Drokin <oleg.drokin@intel.com>